# notes-fastapi

./: .env.example  .gitignore  database.py  learn.md  main.py  notes.db  pyproject.toml  tokengenerator.py
