[project]
name = "Notes-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "jose[cryptography]>=1.0.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
]

[tool.uv.workspace]
members = [
    "proj",
]
